# ihaveasecret

./: .gitignore  Containerfile  LICENSE  README.md  compose.yml  pyproject.toml
ihaveasecret/: __init__.py  __main__.py  babel.cfg  config.py  configuration.py  csrf_token.py  routes.py  secrets.py  secretstore.py  send_email.py  util.py
ihaveasecret/static/: ads.txt  main.js  styles.css  zxcvbn.js
ihaveasecret/templates/: base.html  check_password.html  confirm_reveal.html  create.html  created.html  created_email.html  error.html  read.html  reveal.html
ihaveasecret/translations/de/LC_MESSAGES/: messages.po
ihaveasecret/translations/es/LC_MESSAGES/: messages.po
ihaveasecret/translations/fr/LC_MESSAGES/: messages.po
tests/: test_secrets.py
